Add ruby stairs (optional dependency on Pl3xStairs)

--- a/src/main/resources/assets/rubies/lang/en_us.lang
+++ b/src/main/resources/assets/rubies/lang/en_us.lang
@@ -13,6 +13,8 @@ item.ruby_boots.name=Ruby Boots
 
 tile.ruby_block.name=Block of Ruby
 tile.ruby_ore.name=Ruby Ore
+tile.stairs_ruby.name=Ruby Stairs
+tile.stairs_ruby_ore.name=Ruby Ore Stairs
 
 config.title=Rubies Config
 
